# rc_bringup

./: .pre-commit-config.yaml  CMakeLists.txt  README.md  package.xml
launch/: start.launch  visual_interface.launch
scripts/BT_visual_interface/: Groot.service  Groot.sh
scripts/auto_start/: AutoSetCan.service  AutoSetEno1.service  AutoSetEno1.sh  AutoSetRadar.service  AutoSetRadar.sh  control_rosbag_record.service  control_rosbag_record.sh  create_special_service.sh  delete_specific_service.sh  rc_start.service  rc_start.sh  start_ros_master.service  start_ros_master.sh
scripts/environment/: rabbit.sh
